Initial look at resolution of previous issues:     -When changing orientation, the three js canvas was not resizing correctly.
     Solution: This issue was initially resolved by using the size of the container div.
               As a result, the resize function uses a ref tied to the div element to get
               the clientWidth/clientHeight.

    -When changing orientation on safari, the viewport ended up shifted on the first
     orientation change. On subsequent orientation changes the viewport seemed to fall into place.

     Solution: Added window.scrollTo(0,0) on each orientation update to force the view. This seems
               to have fixed the out of place viewport.

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,15 +5,19 @@
 body {
   width: 100vw;
   height: 100vw;
+  margin: 0px;
+  padding: 0px;
+  overflow: hidden;
 }
+
 .page {
   background-color: rgba(59, 33, 83, 0.726);
   display: flex;
   flex-direction: row;
   width: 100vw;
   height: 100vh;
-  position: relative;
-  overflow-y: hidden;
+  // position: relative;
+  // overflow-y: hidden;
 }
 .controls {
   position: absolute;
@@ -28,7 +32,9 @@ body {
 {
   width: 7px;
 }
-
+canvas {
+  display: block;
+}
 #style-1::-webkit-scrollbar
 {
 	width: 8px;
@@ -44,9 +50,9 @@ body {
   background: #555;
 }
 .threeCanvas {
-  display: flex;
-  width: 100%;
-  height: 100%;
+  display: inline;
+  width: 100vw;
+  height: 100vh;
 }
 .disable-selection {
   -moz-user-select: none; /* Firefox */
